# glide-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml  publish.yaml
examples/: hello.rs
src/: builder.rs  client.rs  config.rs  error.rs  lib.rs
src/lang/: chat.rs  list.rs  mod.rs  stream.rs
src/language/: chat.rs  list.rs  mod.rs  types.rs
src/provider/: anthropic.rs  azureopenai.rs  bedrock.rs  cohere.rs  mod.rs  octoml.rs  ollama.rs  openai.rs
src/providers/: anthropic.rs  mod.rs
src/service/: language.rs  mod.rs
