# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "glide-rs"
version = "0.1.0"
rust-version = "1.71.0"
edition = "2021"

license = "Apache-2.0"
readme = "./README.md"

authors = ["EinStack <contact@einstack.ai>"]
repository = "https://github.com/EinStack/glide-rs"
homepage = "https://www.einstack.ai/"
documentation = "https://docs.rs/glide-rs"

categories = ["web-programming"]
keywords = ["ai", "llm", "gateway"]
description = "A minimal EinStack client."

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
reqwest-websocket = { version = "0.3.0" }
futures = { version = "0.3.30", default-features = false, features = [] }
thiserror = { version = "1.0.59" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
